添加 Zeabur 部署配置文件
- 添加 zeabur.json 配置文件
- 添加 package.json 用于构建脚本
- 添加 .ruby-version 指定 Ruby 版本
- 添加 .nvmrc 指定 Node.js 版本
- 更新 _config.yml 添加插件配置
- 添加 ZEABUR_DEPLOY.md 部署说明文档

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,19 @@
 # Site settings
 title: zhangshuming Blog
 description: zhangshuming blog
+
+# Jekyll configuration
+plugins:
+  - jekyll-sass-converter
+  - jekyll-watch
+
+# Exclude from processing
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor
+  - .git
+  - .gitignore
+  - README.md
+  - ZEABUR_DEPLOY.md
